Fix supervisord file

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,10 @@
+[supervisord]
+nodaemon=true
+
 [program:FlaskRedis]
 directory=/
-command="python3 FlaskRedis.py"
+command=/bin/ash -c "python3 FlaskRedis.py"
 
 [program:HelloRedis]
 directory=/
-command="python3 HelloRedis.py"
+command=/bin/ash -c "python3 HelloRedis.py"
