--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,10 +1,11 @@
 [supervisord]
 nodaemon=true
 
+[program:redis]
+command=/bin/ash -c "redis-server"
+
 [program:FlaskRedis]
-directory=/
 command=/bin/ash -c "python3 FlaskRedis.py"
 
 [program:HelloRedis]
-directory=/
 command=/bin/ash -c "python3 HelloRedis.py"
